--- a/views/mult_form.erb
+++ b/views/mult_form.erb
@@ -1,5 +1,7 @@
 <h1>New multiplication</h1>
 
-<form action="/">
-
-</form>
+<form action="/wizard/multiply">
+  <label for="first_num">
+    Multiply this:
+  </label>
+  <input id="first_num" name="first_num" type="text" >
