--- a/views/div_form.erb
+++ b/views/div_form.erb
@@ -1,8 +1,8 @@
-<h1>New multiplication</h1>
+<h1>New division</h1>
 
-<form action="/wizard_multiply">
+<form action="/wizard_divide">
   <label for="first_num">
-    Multiply this:
+    Divide this:
   </label>
   <input id="first_num" name="first_num" type="text">
 
@@ -12,6 +12,6 @@
   <input id="second_num" name="second_num" type="text">
 
   <button>
-    Multiply!
+    Divide!
   </button>
-  </form>
+</form>
